--- a/tutorial-GAN-LHCb_RICH.ipynb
+++ b/tutorial-GAN-LHCb_RICH.ipynb
@@ -175,7 +175,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "r8glZROOi5xL"
       },
@@ -196,7 +196,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -237,7 +237,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -286,7 +286,7 @@
       "metadata": {
         "id": "twM1ba1PvgVl"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -320,7 +320,7 @@
         "id": "QfnPXl161n2f",
         "outputId": "cd27c9a9-873a-4eea-abd0-c6908e7f4012"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -731,7 +731,7 @@
         "id": "j99DTVou5KdZ",
         "outputId": "05fb7868-721f-4719-f248-e9cfe1e915c7"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -801,7 +801,7 @@
         "id": "2r8zWzbI7A2V",
         "outputId": "337a9d86-89cb-4893-9e67-e4ca33aaca21"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -850,7 +850,7 @@
         "id": "xinGo4AJ9OFu",
         "outputId": "be2e4b9b-3cc5-4680-b6cd-f3c3b76ee1a4"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -890,7 +890,7 @@
         "id": "BElR-YUR_0df",
         "outputId": "3bd66432-65bc-431e-85be-c1d4c5fe6e5a"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1233,7 +1233,7 @@
         "id": "VvfBZUjvB4oT",
         "outputId": "04984b2d-3018-4b5a-938a-2161cbd8da84"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1567,14 +1567,14 @@
       "source": [
         "#### The generator\n",
         "\n",
-        "The **generator player** can be implemented with the high-level [`Generator`](https://github.com/mbarbetti/pidgan/blob/main/src/pidgan/players/generators/Generator.py) class that provides the neural network model wrapping the TensorFlow's [`Sequential`](https://www.tensorflow.org/api_docs/python/tf/keras/Sequential) API. Before to initialize a `Generator` instance, let's have a look to its arguments:\n",
+        "The **generator player** can be implemented with the high-level [`Generator`](https://github.com/mbarbetti/pidgan/blob/main/src/pidgan/players/generators/Generator.py) class that provides the neural network model wrapping the TensorFlow [Sequential API](https://www.tensorflow.org/guide/keras/sequential_model). Before to initialize a `Generator` instance, let's have a look to its arguments:\n",
         "\n",
         "* **`output_dim`** (_int_) - Dimensionality of the generator output space.\n",
         "* **`latent_dim`** (_int_) - Dimensionality of the latent space.\n",
-        "* **`num_hidden_layers`** (_int_, default=5) - Number of the hidden layers of the TensorFlow's `Sequential` model.\n",
+        "* **`num_hidden_layers`** (_int_, default=5) - Number of the hidden layers passed to the [`tf.keras.Sequential`](https://www.tensorflow.org/api_docs/python/tf/keras/Sequential) model.\n",
         "* **`mlp_hidden_units`** (_int_ or _array_like_, default=128) - Number of neuron units per each hidden layer. It can also be passed as an array of unit numbers having length equal to the number of hidden layers.\n",
         "* **`dropout_rate`** (_float_ or _array_like_, default=0.0) - Fraction of the input neurons to drop per each hidden layer. It can also be passed as an array of float numbers having length equal to the number of hidden layers.\n",
-        "* **`output_activation`** (_activation_like_ or _None_, default=None) - Activation function to use in the output layer. If you don't specify anything, no activation is applied (i.e., \"linear\" activation: $a(x) = x$).\n",
+        "* **`output_activation`** (_activation_like_ or _None_, default=None) - Activation function to use in the generator output layer (see [`tf.keras.activations`](https://www.tensorflow.org/api_docs/python/tf/keras/activations)). If None, no activation is applied (i.e., \"linear\" activation: $a(x) = x$).\n",
         "* **`name`** (_str_ of _None_, default=None) - The name of the generator model.\n",
         "* **`dtype`** (_dtype_ or _None_, default=None) - The dtype of the generator layer's computations and weights."
       ],
@@ -1600,7 +1600,7 @@
       "metadata": {
         "id": "0th7xpVKCGN0"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1616,7 +1616,7 @@
         "id": "luH3v1XVEBlc",
         "outputId": "4f2b20dc-7b2d-490f-e897-02051a8a7dfb"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1672,13 +1672,13 @@
       "source": [
         "#### The discriminator\n",
         "\n",
-        "The **discriminator player** can be implemented with the high-level [`Discriminator`](https://github.com/mbarbetti/pidgan/blob/main/src/pidgan/players/discriminators/Discriminator.py) class that provides the neural network model wrapping the TensorFlow's [`Sequential`](https://www.tensorflow.org/api_docs/python/tf/keras/Sequential) API. Again, before to initialize a `Discriminator` instance, let's have a look to its arguments:\n",
+        "The **discriminator player** can be implemented with the high-level [`Discriminator`](https://github.com/mbarbetti/pidgan/blob/main/src/pidgan/players/discriminators/Discriminator.py) class that provides the neural network model wrapping the TensorFlow [Sequential API](https://www.tensorflow.org/guide/keras/sequential_model). Again, before to initialize a `Discriminator` instance, let's have a look to its arguments:\n",
         "\n",
         "* **`output_dim`** (_int_) - Dimensionality of the discriminator output space.\n",
-        "* **`num_hidden_layers`** (_int_, default=5) - Number of the hidden layers of the TensorFlow's Sequential model.\n",
+        "* **`num_hidden_layers`** (_int_, default=5) - Number of the hidden layers passed to the [`tf.keras.Sequential`](https://www.tensorflow.org/api_docs/python/tf/keras/Sequential) model.\n",
         "* **`mlp_hidden_units`** (_int_ or _array_like_, default=128) - Number of neuron units per each hidden layer. It can also be passed as an array of unit numbers having length equal to the number of hidden layers.\n",
         "* **`dropout_rate`** (_float_ or _array_like_, default=0.0) - Fraction of the input neurons to drop per each hidden layer. It can also be passed as an array of float numbers having length equal to the number of hidden layers.\n",
-        "* **`output_activation`** (_activation_like_ or _None_, default=\"sigmoid\") - Activation function to use in the output layer. If you don't specify anything, no activation is applied (i.e., \"linear\" activation: $a(x) = x$).\n",
+        "* **`output_activation`** (_activation_like_ or _None_, default=\"sigmoid\") - Activation function to use in the dicriminator output layer (see [`tf.keras.activations`](https://www.tensorflow.org/api_docs/python/tf/keras/activations)). If None, no activation is applied (i.e., \"linear\" activation: $a(x) = x$).\n",
         "* **`name`** (_str_ of _None_, default=None) - The name of the discriminator model.\n",
         "* **`dtype`** (_dtype_ or _None_, default=None) - The dtype of the discriminator layer's computations and weights."
       ],
@@ -1703,7 +1703,7 @@
       "metadata": {
         "id": "ufj8Xi4fC_Ot"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1719,7 +1719,7 @@
         "id": "nfqi9DHvETlY",
         "outputId": "cf0b7d12-0ddd-4eff-8e68-098cafb62b46"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1775,19 +1775,41 @@
       "source": [
         "#### The GAN algorithm\n",
         "\n",
-        "The **original GAN algorithm** [[1](https://arxiv.org/abs/1406.2661)] can be implemented with the high-level [`GAN`](https://github.com/mbarbetti/pidgan/blob/main/src/pidgan/algorithms/GAN.py) class that defines the training procedure of the two players customizing the TensorFlow's [`Model`](https://www.tensorflow.org/api_docs/python/tf/keras/Model) class and, in particular, its `fit()` method. Once again, before to initialize a `GAN` instance, let's have a look to its arguments:\n",
+        "The **original GAN algorithm** [[1](https://arxiv.org/abs/1406.2661)] can be implemented with the high-level [`GAN`](https://github.com/mbarbetti/pidgan/blob/main/src/pidgan/algorithms/GAN.py) class that defines the training procedure of the two players customizing the TensorFlow's [`Model`](https://www.tensorflow.org/api_docs/python/tf/keras/Model) class and, in particular, its `fit()` method. Once again, before to initialize a `GAN` instance, let's have a look at its arguments:\n",
         "\n",
-        "* **`generator`** (_generator_like_) - The generator network. It must be passed as a pidgan's `Generator` instance.\n",
-        "* **`discriminator`** (_discriminator_like_) - The discriminator network. It must be passed as a pidgan's `Discriminator` instance.\n",
-        "* **`use_original_loss`** (_bool_, default=True) - If True, the generator is trained using the loss function $\\mathcal{L}_{\\rm{GAN}} = \\log{D(x)} + \\log{(1 - D(G(z)))}$. If False, the generator training is driven by $\\mathcal{L}_{\\rm{GAN}}^\\prime = \\log{D(x)} - \\log{D(G(z))}$ as suggested in Ref. [[1](https://arxiv.org/abs/1406.2661)].\n",
-        "* **`injected_noise_stddev`** (_float_, default=0.0) - When different from zero, a continous gaussian noise is added to the discriminator input to stabilize the training procedure following what described in Ref. [[2](https://arxiv.org/abs/1701.04862)].\n",
+        "* **`generator`** (_generator_like_) - The generator network. It must be passed as a pidgan's [`Generator`](https://github.com/mbarbetti/pidgan/blob/main/src/pidgan/players/generators/Generator.py) instance.\n",
+        "* **`discriminator`** (_discriminator_like_) - The discriminator network. It must be passed as a pidgan's [`Discriminator`](https://github.com/mbarbetti/pidgan/blob/main/src/pidgan/players/discriminators/Discriminator.py) instance.\n",
+        "* **`use_original_loss`** (_bool_, default=True) - If True, the generator is trained using the loss function $\\mathcal{L}_{\\rm{GAN}} = \\log{D(x)} + \\log{(1 - D(G(z)))}$. If False, the generator training is driven by $\\mathcal{L}_{\\rm{GAN}}^\\prime = \\log{D(x)} - \\log{D(G(z))}$ that, as suggested in Ref. [[1](https://arxiv.org/abs/1406.2661)], is more robust against the vanishing gradient problem.\n",
+        "* **`injected_noise_stddev`** (_float_, default=0.0) - When different from zero, it represents the standard deviation of the gaussian noise added to the discriminator input to stabilize the training procedure following what described in Ref. [[2](https://arxiv.org/abs/1701.04862)].\n",
         "* **`feature_matching_penalty`** (_float_, default=0.0) - Importance of the regularization term added to the generator training to force the hidden state of the discriminator to match between reference and generated examples. Its design follows from what proposed in Ref. [[5](https://arxiv.org/abs/1606.03498)].\n",
-        "* **`referee`** (_classifier_like_ of _None_, default=None) - When passed it enables the training of a third independent player: the referee network. It can be considered as a second discriminator whose training can't be hindered by the generator. If passed, it must be a pidgan's `Classifier` instance.\n",
-        "* **`name`** (_str_ of _None_, default=None) - The name of the GAN model.\n",
+        "* **`referee`** (_classifier_like_ or _None_, default=None) - When passed it enables the training of a third independent player: the referee network. It can be used to assess the quality of the generator output during the training. If passed, it must be a pidgan's [`Classifier`](https://github.com/mbarbetti/pidgan/blob/main/src/pidgan/players/classifiers/Classifier.py) instance.\n",
+        "* **`name`** (_str_ or _None_, default=None) - The name of the GAN model.\n",
         "* **`dtype`** (_dtype_ or _None_, default=None) - The dtype of the GAN model's computations."
       ],
       "metadata": {
         "id": "IpQQWkPS5htN"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "To not further complicate this tutorial, we avoid to use the referee network in this case, even if its initialization is straightforward:\n",
+        "\n",
+        "```python\n",
+        "from pidgan.players.classifiers import Classifier\n",
+        "\n",
+        "referee = Classifier(\n",
+        "    num_hidden_layers=5,\n",
+        "    mlp_hidden_units=128,\n",
+        "    dropout_rate=0.0,\n",
+        "    name=\"referee\"\n",
+        ")\n",
+        "```\n",
+        "\n",
+        "It's time to initialize a [`GAN`](https://github.com/mbarbetti/pidgan/blob/main/src/pidgan/algorithms/GAN.py) instance!"
+      ],
+      "metadata": {
+        "id": "qgW6y0Ru1vPp"
       }
     },
     {
@@ -1807,13 +1829,23 @@
       "metadata": {
         "id": "SBEOKmeEDWC4"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "source": [
-        "#### Model compilation"
+        "#### Model compilation\n",
+        "\n",
+        "To finalize the [`GAN`](https://github.com/mbarbetti/pidgan/blob/main/src/pidgan/algorithms/GAN.py) model preparation before to run the training procedure, we need to execute the `compile()` method. Differently from the TensorFlow's `compile()` method, the [pidgan](https://github.com/mbarbetti/pidgan)'s one [...]\n",
+        "\n",
+        "* **`metrics`** (_list_ or _None_, default=None) - If not None, list of metrics to be evaluated by the GAN model during training and testing. Each of this can be a string (name of a built-in pidgan function) or a [`pidgan.metrics`](https://github.com/mbarbetti/pidgan/tree/main/src/pidgan/metrics) instance.\n",
+        "* **`generator_optimizer`** (_optimizer_like_, default=\"rmsprop\") - String (name of optimizer) or optimizer instance for the generator network (see [`tf.keras.optimizers`](https://www.tensorflow.org/api_docs/python/tf/keras/optimizers)).\n",
+        "* **`discriminator_optimizer`** (_optimizer_like_, default=\"rmsprop\") - String (name of optimizer) or optimizer instance for the discriminator network. (see [`tf.keras.optimizers`](https://www.tensorflow.org/api_docs/python/tf/keras/optimizers)).\n",
+        "* **`generator_upds_per_batch`** (_int_, default=1) - Number of the generator weights updates per batch of data.\n",
+        "* **`discriminator_upds_per_batch`** (_int_, default=1) - Number of the discriminator weights updates per batch of data.\n",
+        "* **`referee_optimizer`** (_optimizer_like_ or _None_, default=None) - If not None, string (name of optimizer) or optimizer instance for the referee network (see [`tf.keras.optimizers`](https://www.tensorflow.org/api_docs/python/tf/keras/optimizers)).\n",
+        "* **`referee_upds_per_batch`** (_int_ or _None_, default=None) - If not None, number of the referee weights updates per batch of data."
       ],
       "metadata": {
         "id": "ZMrE8bs952KB"
@@ -1822,24 +1854,10 @@
     {
       "cell_type": "code",
       "source": [
-        "g_opt = keras.optimizers.RMSprop(learning_rate=0.001)\n",
-        "d_opt = keras.optimizers.RMSprop(learning_rate=0.0005)"
-      ],
-      "metadata": {
-        "id": "DW1ULa2yFrIv"
-      },
-      "execution_count": 16,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "from pidgan.metrics import Accuracy, BinaryCrossentropy\n",
-        "\n",
         "gan.compile(\n",
-        "    metrics=[Accuracy(), BinaryCrossentropy(from_logits=False, label_smoothing=0.0)],\n",
-        "    generator_optimizer=g_opt,\n",
-        "    discriminator_optimizer=d_opt,\n",
+        "    metrics=[\"accuracy\", \"bce\"],\n",
+        "    generator_optimizer=keras.optimizers.RMSprop(learning_rate=0.001),\n",
+        "    discriminator_optimizer=keras.optimizers.RMSprop(learning_rate=0.0005),\n",
         "    generator_upds_per_batch=1,\n",
         "    discriminator_upds_per_batch=1,\n",
         "    referee_optimizer=None,\n",
@@ -1849,7 +1867,7 @@
       "metadata": {
         "id": "kHL20AxZFNOq"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1891,7 +1909,7 @@
       "metadata": {
         "id": "C0-PqvTDGd1J"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1913,7 +1931,7 @@
         "id": "N1mGZ3_FHMNg",
         "outputId": "64170d72-37ce-4af2-ac23-80dad2a0a26a"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2178,7 +2196,7 @@
         "id": "-jdGN4aFIhdn",
         "outputId": "25ca9bd7-16d5-4be0-d304-e5069bcd8f9b"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2223,7 +2241,7 @@
         "id": "2id4-AK5J-WW",
         "outputId": "f9cf2093-5b20-4378-a8e3-be228db7ce4b"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2277,7 +2295,7 @@
         "id": "P8rgOZgpKjPj",
         "outputId": "e5b8445f-0485-4715-f4f3-ebacc9373b0e"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2312,7 +2330,7 @@
       "metadata": {
         "id": "HVid9HKfLzPW"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2350,7 +2368,7 @@
         "id": "XM985aPPNPR3",
         "outputId": "e5200694-3c0a-4d38-9ea0-e518e94abc75"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2399,7 +2417,7 @@
         "id": "KeRJbgTMPl6g",
         "outputId": "905e8d21-8ea0-4050-e2f2-3d8941d3375e"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2448,7 +2466,7 @@
         "id": "rMh4nOK3PyEI",
         "outputId": "3a470862-65f7-40c9-cbc7-65a4378e065b"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2497,7 +2515,7 @@
         "id": "z3WQRODrQE7H",
         "outputId": "9560cd51-c414-41bf-fc1d-f17df530b4b2"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
