--- a/tutorial-GAN-LHCb_RICH.ipynb
+++ b/tutorial-GAN-LHCb_RICH.ipynb
@@ -133,8 +133,8 @@
         "\n",
         "Traditional GAN systems suffer from many issues, particularly during the training phase:\n",
         "\n",
-        "* the generator _may collapse_ producing only a single sample or a small family of very similar samples (**mode collapse**)\n",
-        "* the two players _may oscillate_ during training rather than converging to the [**Nash equilibrium**](https://en.wikipedia.org/wiki/Nash_equilibrium)\n",
+        "* the generator may _collapse_ producing only a single sample or a small family of very similar samples (**mode collapse**)\n",
+        "* the two players may _oscillate_ during training rather than converging to the [**Nash equilibrium**](https://en.wikipedia.org/wiki/Nash_equilibrium)\n",
         "* if _imbalance_ between the two players occurs, then the system is incapable of learning at all\n",
         "\n",
         "All these drawbacks result from the [**vanishing gradient problem**](https://en.wikipedia.org/wiki/Vanishing_gradient_problem), namely the lack of information for the update of the $G$ parameters. This is due to the saturation of the $D$ that is so good in distinguishing the origin of the two samples that no errors remain to the $G$ to improve the generated space. To fix the problem, one can add _continuous noise_ to both $D$ and $G$. This trick allows to learn thanks to a non-zero gradient [[2](https://arxiv.org/abs/1701.04862)]."
@@ -175,7 +175,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "r8glZROOi5xL"
       },
@@ -196,7 +196,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -237,7 +237,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -286,7 +286,7 @@
       "metadata": {
         "id": "twM1ba1PvgVl"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -320,7 +320,7 @@
         "id": "QfnPXl161n2f",
         "outputId": "fd642a35-5cbb-4ff7-e12e-0a00acd52b43"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -731,7 +731,7 @@
         "id": "j99DTVou5KdZ",
         "outputId": "6ecbe380-5e5b-46ef-ab2a-f70901a817ad"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -801,7 +801,7 @@
         "id": "2r8zWzbI7A2V",
         "outputId": "607a9228-4107-4cb0-f3ea-9859594eef2b"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -850,7 +850,7 @@
         "id": "xinGo4AJ9OFu",
         "outputId": "bd4db54a-60e1-484f-93be-607a905c2fe6"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -890,7 +890,7 @@
         "id": "BElR-YUR_0df",
         "outputId": "2982ae26-0f3d-48bc-ba62-2b3a12b08b13"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1233,7 +1233,7 @@
         "id": "VvfBZUjvB4oT",
         "outputId": "37155150-0c36-42cc-fc33-f101d3517cee"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1600,7 +1600,7 @@
       "metadata": {
         "id": "0th7xpVKCGN0"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1616,7 +1616,7 @@
         "id": "luH3v1XVEBlc",
         "outputId": "0ed080ff-9474-4185-dbe4-d2051d344b0b"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1703,7 +1703,7 @@
       "metadata": {
         "id": "ufj8Xi4fC_Ot"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1719,7 +1719,7 @@
         "id": "nfqi9DHvETlY",
         "outputId": "9d1c0705-38fc-47fc-ff59-0b9f00722af7"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1829,7 +1829,7 @@
       "metadata": {
         "id": "SBEOKmeEDWC4"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1867,7 +1867,7 @@
       "metadata": {
         "id": "kHL20AxZFNOq"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1915,7 +1915,7 @@
       "metadata": {
         "id": "C0-PqvTDGd1J"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1948,7 +1948,7 @@
         "id": "N1mGZ3_FHMNg",
         "outputId": "de88ba7b-bee7-4d18-f877-c829d0b933f9"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2222,7 +2222,7 @@
         "id": "-jdGN4aFIhdn",
         "outputId": "aabefd38-d3ff-4d89-9fb6-aa374ef34dc5"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2267,7 +2267,7 @@
         "id": "2id4-AK5J-WW",
         "outputId": "59543d08-9204-4dd4-c92c-0de158d166fc"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2321,7 +2321,7 @@
         "id": "P8rgOZgpKjPj",
         "outputId": "5c04e167-6620-41d8-a9da-4984639fd6ce"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2358,7 +2358,7 @@
       "metadata": {
         "id": "HVid9HKfLzPW"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2396,7 +2396,7 @@
         "id": "XM985aPPNPR3",
         "outputId": "b2e22149-44c0-4fc6-d694-c83ec0256ba4"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2445,7 +2445,7 @@
         "id": "KeRJbgTMPl6g",
         "outputId": "3c699569-8d06-495a-b03a-9a6aa8be0c2b"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2494,7 +2494,7 @@
         "id": "rMh4nOK3PyEI",
         "outputId": "a4601bf4-ee79-421b-ad5e-5e229b6b6681"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2543,7 +2543,7 @@
         "id": "z3WQRODrQE7H",
         "outputId": "2e161338-811f-4d52-c80a-f8978c2c8edc"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2584,7 +2584,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2614,7 +2614,7 @@
       "metadata": {
         "id": "MxsMQAkhU2_S"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2629,7 +2629,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
