minor text adjustments

--- a/tutorial-GAN-LHCb_RICH.ipynb
+++ b/tutorial-GAN-LHCb_RICH.ipynb
@@ -1801,7 +1801,7 @@
         "referee = Classifier(\n",
         "    num_hidden_layers=5,\n",
         "    mlp_hidden_units=128,\n",
-        "    dropout_rate=0.0,\n",
+        "    mlp_dropout_rates=0.0,\n",
         "    name=\"referee\"\n",
         ")\n",
         "```\n",
@@ -1824,6 +1824,7 @@
         "    injected_noise_stddev=0.05,\n",
         "    feature_matching_penalty=0.0,\n",
         "    referee=None,\n",
+        "    name=\"GAN\",\n",
         ")"
       ],
       "metadata": {
@@ -1921,7 +1922,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Calling `gan.fit()` allows to perform the **minimax two-players game**, training the generator to reproduce the reference space $y$ on the basis of the conditions $x$ thanks to the discriminator feedbacks. The arguments taken by the pidgan `fit()` method are the same ones traditionally passed to a TensorFlow [`Model`](https://www.tensorflow.org/api_docs/python/tf/keras/Model) instance. The schedulers are passed through the `callbacks` argument and, since their verbosity has been enabled (`verbose` and `key` passed), the learning rates of both the generator and discriminator are printed during the training procedure.\n",
+        "Calling `gan.fit()` allows to perform the **minimax two-player game**, training the generator to reproduce the reference space $y$ on the basis of the conditions $x$ thanks to the discriminator feedbacks. The arguments taken by the pidgan `fit()` method are the same ones traditionally passed to a TensorFlow [`Model`](https://www.tensorflow.org/api_docs/python/tf/keras/Model) instance. The schedulers are passed through the `callbacks` argument and, since their verbosity has been enabled (`verbose` and `key` passed), the learning rates of both the generator and discriminator are printed during the training procedure.\n",
         "\n",
         "**Note:** Training the [`GAN`](https://github.com/mbarbetti/pidgan/blob/main/src/pidgan/algorithms/GAN.py) model on Colab using the hyperparameters chosen for this tutorial (i.e., batch-size, epochs, updates per batch) takes about 20 minutes with no-GPU equipped or 10 minutes enabling the T4-powered runtime."
       ],
@@ -2680,7 +2681,6 @@
     "orig_nbformat": 4,
     "colab": {
       "provenance": [],
-      "toc_visible": true,
       "gpuType": "T4"
     },
     "accelerator": "GPU"
