minor text adjustment

--- a/tutorial-WGAN_GP-LHCb_RICH.ipynb
+++ b/tutorial-WGAN_GP-LHCb_RICH.ipynb
@@ -168,7 +168,7 @@
       "source": [
         "## Tutorial\n",
         "\n",
-        "The aim of this tutorial is to build a parameterization of the LHCb RICH detectors. Since we expect that the high-level response of the RICH system only depends on the kinematics of the traversing particles and the detector occupancy, the former can be parameterized training a **WGAN-GP model** properly conditioned [[6](https://arxiv.org/abs/1411.1784), [7](https://arxiv.org/abs/1905.11825)]. The pidgan package provides several GAN [`algorithms`](https://github.com/mbarbetti/pidgan/tree/main/src/pidgan/algorithms) implementing some of the most used tricks presented in the literature to stablize their training [[3](https://arxiv.org/abs/1701.07875), [8](https://arxiv.org/abs/1606.03498)]. The pidgan [`players`](https://github.com/mbarbetti/pidgan/tree/main/src/pidgan/players), namely the generator and discriminator networks, are designed to be trained taking conditions as input. In this notebook we will see how to build a model for the RICH system using the pidgan [`WGAN_GP`](https://github.com/mbarbetti/pidgan/blob/main/src/pidgan/algorithms/WGAN_GP.py) algorithm."
+        "The aim of this tutorial is to build a parameterization of the LHCb RICH detectors. Since we expect that the high-level response of the RICH system only depends on the kinematics of the traversing particles and the detector occupancy, the former can be parameterized training a **WGAN-GP model** properly conditioned [[6](https://arxiv.org/abs/1411.1784), [7](https://arxiv.org/abs/1905.11825)]. The pidgan package provides several GAN [`algorithms`](https://github.com/mbarbetti/pidgan/tree/main/src/pidgan/algorithms) implementing some of the most used tricks presented in the literature to stablize their training [[3](https://arxiv.org/abs/1701.07875), [4](https://arxiv.org/abs/1704.00028), [8](https://arxiv.org/abs/1606.03498)]. The pidgan [`players`](https://github.com/mbarbetti/pidgan/tree/main/src/pidgan/players), namely the generator and discriminator networks, are designed to be trained taking conditions as input. In this notebook we will see how to build a model for the RICH system using the pidgan [`WGAN_GP`](https://github.com/mbarbetti/pidgan/blob/main/src/pidgan/algorithms/WGAN_GP.py) algorithm."
       ]
     },
     {
@@ -712,7 +712,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 470
+          "height": 249
         },
         "id": "j99DTVou5KdZ",
         "outputId": "169e8c67-b040-4e77-9e03-7a5e1400eb9c"
@@ -773,7 +773,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 863
+          "height": 655
         },
         "id": "2r8zWzbI7A2V",
         "outputId": "52a869db-1dd0-4c3f-fee2-569ff14f3461"
@@ -2192,7 +2192,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 492
+          "height": 374
         },
         "id": "-jdGN4aFIhdn",
         "outputId": "38d52697-7658-41d4-c13a-82e8555f1d9a"
@@ -2238,7 +2238,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 492
+          "height": 371
         },
         "id": "2id4-AK5J-WW",
         "outputId": "9b9a75d2-5ac6-4485-df6c-d5d3ce34e916"
@@ -2363,7 +2363,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 473
+          "height": 356
         },
         "id": "XM985aPPNPR3",
         "outputId": "fbaa9012-7db9-4f61-c8d7-d7ab9a35eccd"
@@ -2412,7 +2412,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 473
+          "height": 356
         },
         "id": "KeRJbgTMPl6g",
         "outputId": "61508283-3ae8-42cf-cd06-3a78de3405ea"
@@ -2461,7 +2461,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 479
+          "height": 363
         },
         "id": "rMh4nOK3PyEI",
         "outputId": "a30df264-ba96-4e12-87b8-e0f729a79f6e"
@@ -2510,7 +2510,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 473
+          "height": 358
         },
         "id": "z3WQRODrQE7H",
         "outputId": "aeb20630-d62e-4fec-c6c8-18f346456977"
